# tinygrad-noa_with-pyprojecttoml

./: README.md  pyproject.toml  requirements.txt
