[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A brief description of your project."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"  # Replace with your license

[tool.poetry.dependencies]
python = "^3.8"  # Adjust to match the Python version you're using
ipython = "8.18.1"
Django = "4.2.1"

[tool.poetry.dev-dependencies]
# Add any development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
